# nfctools

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  TODO.md  build.rs  dependencies.md  flake.nix  justfile  npcr.nu  rustfmt.toml  todo.md
.github/workflows/: main.yml  release.yml
assets/: main.css
installer/: installer.iss
schemas/: Cargo.toml  build.rs
schemas/assets/: ExampleFleet1.fleet  ExampleMissile1.missile  README.md
schemas/src/: lib.rs
src/: audio.rs  config.rs  dressings.rs  error.rs  export.rs  fleet_data.rs  fleet_edit.rs  fleet_info_reader.rs  fleet_io.rs  load_fleets.rs  main.rs  menubar.rs  merge.rs  scramble.rs  search.rs  tags.rs  test.rs  ui.rs
src.old/: error.rs  fleet_io.rs  load_fleets.rs  main.rs
src.old/actions/: merge.rs  mod.rs
src.old/fleet_editor/: liner_hull_config.rs  mod.rs
src.old/missile_templates/: load_missiles.rs  missiles_window.rs  mod.rs  update_fleets.rs
src.old/win_predictor/: mod.rs
src/actions/: merge.rs  save_description.rs
src/components/: mod.rs
src/components/checkbox/: component.rs
src/components/color_picker/: component.rs  style.css
src/components/context_menu/: component.rs
src/components/dropdown_menu/: component.rs  style.css
src/components/slider/: component.rs
src/components/switch/: component.rs
src/fleet_editor/: liner_hull_config.rs  mod.rs
src/missile_templates/: load_missiles.rs  missiles_window.rs  mod.rs  update_fleets.rs
src/system/: audio.rs  config.rs  fleet_io.rs  load_fleets.rs  mod.rs
src/themes/: default.rs
src/ui/: actions.rs  fleet_editor.rs  fleet_list.rs  fleets_tab.rs  main_menu.rs  menubar.rs  mod.rs  win_predictor.rs
src/ui/dialog/: backup.rs  error.rs  merge_fleets.rs  mod.rs  settings.rs  spinner.rs  swarm_config.rs
src/ui/fleet_editor/: dressings.rs  mod.rs
src/ui/formations/: mod.rs  renderer.js  swarm.rs  viewer3d.rs
src/ui/win_predictor/: mod.rs
src/util/: export.rs  mod.rs  spawn_async.rs
src/win_predictor/: mod.rs
ui/: fleet-editor.slint  fleet-list.slint  main-window.slint  main.slint  missile-list.slint  win-predictor.slint
