[package]
name = "nfctools"
version = "0.3.0-alpha.d4"
edition = "2021"

[workspace]
members = ["schemas"]

[features]
bundle = []

[dependencies]
chumsky = "0.8"
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6"
directories = "6.0"
glob = "0.3"
lazy_static = "1.5"
metrohash = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
steamlocate = "2.0"
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = "0.3"
schemas = { path = "./schemas" }
rand = "0.9.2"
im = "15.1.0"
dioxus = { version = "0.7", features = ["desktop"] }
futures = "0.3.31"
postcard = { version = "1.1.3", default-features = false, features = ["default", "use-std"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
palette = { version = "0.7.6", features = ["serde", "std"] }
serde_with = "3.19.0"
