[package]
name = "nfctools"
version = "0.3.2"
edition = "2021"

[workspace]
members = ["schemas"]

[features]
bundle = []
auto-update = []

[dependencies]
chumsky = "0.8"
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6"
directories = "6.0"
glob = "0.3"
lazy_static = "1.5"
metrohash = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
steamlocate = "2.0"
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = "0.3"
schemas = { path = "./schemas" }
rand = "0.9.2"
im = "15.1.0"
dioxus = { version = "0.7", features = ["desktop"] }
futures = "0.3.31"
postcard = { version = "1.1.3", default-features = false, features = ["default", "use-std"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
palette = { version = "0.7.6", features = ["serde", "std"] }
serde_with = "3.19.0"
tokio = { version = "1.52.3", features = ["time"] }
rodio = "0.22.2"
dioxus-charts = "0.4.0"
rfd = "0.17.2"
zip = "8.6.0"
nalgebra = { version = "0.35.0", features = ["serde"] }
arboard = "3.6.1"
self_update = "0.44.0"
